lib/src/ctss_bindings_generated.dart


  late final _p1_partykeys_from_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)
        >
      >('p1_partykeys_from_bytes');
  late final _p1_partykeys_from_bytes = _p1_partykeys_from_bytesPtr
      .asFunction<int Function(ffi.Pointer<tss_buffer>, ffi.Pointer<Handle>)>();

  tss_error p1_partykeys_to_bytes(Handle keys, ffi.Pointer<tss_buffer> buf) {
    return tss_error.fromValue(_p1_partykeys_to_bytes(keys, buf));
  }

  late final _p1_partykeys_to_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_partykeys_to_bytes');
  late final _p1_partykeys_to_bytes = _p1_partykeys_to_bytesPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p1_partykeys_message_pk(Handle keys, ffi.Pointer<tss_buffer> pk) {
    return tss_error.fromValue(_p1_partykeys_message_pk(keys, pk));
  }

  late final _p1_partykeys_message_pkPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_partykeys_message_pk');
  late final _p1_partykeys_message_pk = _p1_partykeys_message_pkPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p1_partykeys_message_sign(
    Handle keys,
    ffi.Pointer<tss_buffer> message,
    ffi.Pointer<tss_buffer> signature,
  ) {
    return tss_error.fromValue(
      _p1_partykeys_message_sign(keys, message, signature),
    );
  }

  late final _p1_partykeys_message_signPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p1_partykeys_message_sign');
  late final _p1_partykeys_message_sign = _p1_partykeys_message_signPtr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p1_verify_message(
    ffi.Pointer<tss_buffer> pk,
    ffi.Pointer<tss_buffer> msg,
    ffi.Pointer<tss_buffer> sign,
  ) {
    return tss_error.fromValue(_p1_verify_message(pk, msg, sign));
  }

  late final _p1_verify_messagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p1_verify_message');
  late final _p1_verify_message = _p1_verify_messagePtr
      .asFunction<
        int Function(
          ffi.Pointer<tss_buffer>,
          ffi.Pointer<tss_buffer>,
          ffi.Pointer<tss_buffer>,
        )
      >();

  tss_error p1_init_signer(
    ffi.Pointer<tss_buffer> session_id,
    Handle keyshare,
    ffi.Pointer<tss_buffer> message_hash,
    ffi.Pointer<Handle> p1_out,
  ) {
    return tss_error.fromValue(
      _p1_init_signer(session_id, keyshare, message_hash, p1_out),
    );
  }

  late final _p1_init_signerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<tss_buffer>,
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<Handle>,
          )
        >
      >('p1_init_signer');
  late final _p1_init_signer = _p1_init_signerPtr
      .asFunction<
        int Function(
          ffi.Pointer<tss_buffer>,
          Handle,
          ffi.Pointer<tss_buffer>,
          ffi.Pointer<Handle>,
        )
      >();

  tss_error p2_init_signer(
    ffi.Pointer<tss_buffer> session_id,
    Handle keyshare,
    ffi.Pointer<tss_buffer> message_hash,
    ffi.Pointer<Handle> p2_out,
  ) {
    return tss_error.fromValue(
      _p2_init_signer(session_id, keyshare, message_hash, p2_out),
    );
  }

  late final _p2_init_signerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            ffi.Pointer<tss_buffer>,
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<Handle>,
          )
        >
      >('p2_init_signer');
  late final _p2_init_signer = _p2_init_signerPtr
      .asFunction<
        int Function(
          ffi.Pointer<tss_buffer>,
          Handle,
          ffi.Pointer<tss_buffer>,
          ffi.Pointer<Handle>,
        )
      >();

  tss_error p1_signer_gen_msg1(
    Handle handle,
    ffi.Pointer<tss_buffer> msg1_out,
  ) {
    return tss_error.fromValue(_p1_signer_gen_msg1(handle, msg1_out));
  }

  late final _p1_signer_gen_msg1Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_signer_gen_msg1');
  late final _p1_signer_gen_msg1 = _p1_signer_gen_msg1Ptr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_signer_process_msg1(
    Handle handle,
    ffi.Pointer<tss_buffer> msg1,
    ffi.Pointer<tss_buffer> msg2_out,
  ) {
    return tss_error.fromValue(_p2_signer_process_msg1(handle, msg1, msg2_out));
  }

  late final _p2_signer_process_msg1Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p2_signer_process_msg1');
  late final _p2_signer_process_msg1 = _p2_signer_process_msg1Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p1_signer_process_msg2(
    Handle handle,
    ffi.Pointer<tss_buffer> msg2,
    ffi.Pointer<tss_buffer> msg3_out,
  ) {
    return tss_error.fromValue(_p1_signer_process_msg2(handle, msg2, msg3_out));
  }

  late final _p1_signer_process_msg2Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p1_signer_process_msg2');
  late final _p1_signer_process_msg2 = _p1_signer_process_msg2Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p2_signer_process_msg3(
    Handle handle,
    ffi.Pointer<tss_buffer> msg3,
    ffi.Pointer<tss_buffer> msg4_out,
  ) {
    return tss_error.fromValue(_p2_signer_process_msg3(handle, msg3, msg4_out));
  }

  late final _p2_signer_process_msg3Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p2_signer_process_msg3');
  late final _p2_signer_process_msg3 = _p2_signer_process_msg3Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p1_signer_process_msg4(
    Handle handle,
    ffi.Pointer<tss_buffer> msg4,
    ffi.Pointer<tss_buffer> msg5_out,
  ) {
    return tss_error.fromValue(_p1_signer_process_msg4(handle, msg4, msg5_out));
  }

  late final _p1_signer_process_msg4Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p1_signer_process_msg4');
  late final _p1_signer_process_msg4 = _p1_signer_process_msg4Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p1_singer_fini(Handle p1, ffi.Pointer<tss_buffer> output) {
    return tss_error.fromValue(_p1_singer_fini(p1, output));
  }

  late final _p1_singer_finiPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_singer_fini');
  late final _p1_singer_fini = _p1_singer_finiPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_signer_process_msg5(
    Handle handle,
    ffi.Pointer<tss_buffer> msg5,
    ffi.Pointer<tss_buffer> sign_out,
  ) {
    return tss_error.fromValue(_p2_signer_process_msg5(handle, msg5, sign_out));
  }

  late final _p2_signer_process_msg5Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(
            Handle,
            ffi.Pointer<tss_buffer>,
            ffi.Pointer<tss_buffer>,
          )
        >
      >('p2_signer_process_msg5');
  late final _p2_signer_process_msg5 = _p2_signer_process_msg5Ptr
      .asFunction<
        int Function(Handle, ffi.Pointer<tss_buffer>, ffi.Pointer<tss_buffer>)
      >();

  tss_error p1_signer_error_msg(Handle p1, ffi.Pointer<tss_buffer> msg) {
    return tss_error.fromValue(_p1_signer_error_msg(p1, msg));
  }

  late final _p1_signer_error_msgPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p1_signer_error_msg');
  late final _p1_signer_error_msg = _p1_signer_error_msgPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();

  tss_error p2_signer_error_msg(Handle p2, ffi.Pointer<tss_buffer> msg) {
    return tss_error.fromValue(_p2_signer_error_msg(p2, msg));
  }

  late final _p2_signer_error_msgPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.UnsignedInt Function(Handle, ffi.Pointer<tss_buffer>)
        >
      >('p2_signer_error_msg');
  late final _p2_signer_error_msg = _p2_signer_error_msgPtr
      .asFunction<int Function(Handle, ffi.Pointer<tss_buffer>)>();
}

enum tss_error {
  TSS_OK(0),
  TSS_NO_ERROR(1),
  TSS_INVALID_HANDLE(2),
  TSS_HANDLE_IN_USE(3),
  TSS_INVALID_HANDLE_TYPE(4),
  TSS_NULL_PTR(5),
  TSS_INVALID_SESSION_ID(6),
  TSS_INVALID_SESSION_STATE(7),
  TSS_UNKNOWN_ERROR(8),
  TSS_SERIALIZATION_ERROR(9),
  TSS_PROCESS_MESSAGE_ERROR(10),
  TSS_INVALID_MSG_HASH(11),
  TSS_INVALID_DERIVATION_PATH_STR(12),
  TSS_MESSAGE_SIGNATURE(13),
  TSS_MESSAGE_SIGN_PK(14),
  TSS_MESSAGE_SIGN_VERIFY(15);

  final int value;
  const tss_error(this.value);

  static tss_error fromValue(int value) => switch (value) {
    0 => TSS_OK,
    1 => TSS_NO_ERROR,
    2 => TSS_INVALID_HANDLE,
    3 => TSS_HANDLE_IN_USE,
    4 => TSS_INVALID_HANDLE_TYPE,
    5 => TSS_NULL_PTR,
    6 => TSS_INVALID_SESSION_ID,
    7 => TSS_INVALID_SESSION_STATE,
    8 => TSS_UNKNOWN_ERROR,
    9 => TSS_SERIALIZATION_ERROR,
    10 => TSS_PROCESS_MESSAGE_ERROR,
    11 => TSS_INVALID_MSG_HASH,
    12 => TSS_INVALID_DERIVATION_PATH_STR,
    13 => TSS_MESSAGE_SIGNATURE,
    14 => TSS_MESSAGE_SIGN_PK,
    15 => TSS_MESSAGE_SIGN_VERIFY,
    _ => throw ArgumentError('Unknown value for tss_error: $value'),
  };
}

final class tss_buffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.UintPtr()
  external int len;
}

final class Handle extends ffi.Struct {
  @ffi.Int32()
  external int _0;
}
